# smartHouse

./: CMakeLists.txt  README.md  cmake_install.cmake  log.cpp  log.hpp  main.cpp
GPIO/: PinCtrl.cpp  PinCtrl.hpp
server/: smartHouseApi.hpp
